[package]
name = "hopr-cache"
description = "Contains cached implementations of various traits"
version = "0.1.0"
edition = "2021"
authors = ["HOPR Association <tech@hoprnet.org>"]
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[dependencies]
async-trait = { workspace = true }
moka = "0.12.5"
tracing = { workspace = true }

hopr-crypto-types = { workspace = true }
hopr-primitive-types = { workspace = true }
hopr-internal-types = { workspace = true }

[dev-dependencies]
async-std = { workspace = true }
hex-literal = { workspace = true }
hopr-crypto-random = { workspace = true }
mockall = { workspace = true }