[package]
name = "hopr-internal-types"
version = "0.6.2"
authors = ["HOPR Association <tech@hoprnet.org>"]
description = "Contains types required internally by the HOPR library, these are not generic enough to be used in the external APIs"
edition = "2021"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[dependencies]
alloy = { workspace = true, default-features = false, features = ["contract", "k256"] }
aquamarine = { workspace = true }
bloomfilter = { workspace = true, features = ["serde"] }
bincode = { workspace = true }
hex-literal = { workspace = true }
k256 = {workspace = true}
num_enum = { workspace = true }
multiaddr = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

hopr-bindings = { workspace = true }
hopr-crypto-random = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
criterion = { workspace = true }
cbor4ii = { workspace = true, features = ["serde1", "use_std"] }
lazy_static = { workspace = true }

[features]
default = []

[[bench]]
name = "bloom_filter"
harness = false
