[package]
name = "hopr-internal-types"
version = "0.12.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
description = "Contains types required internally by the HOPR library, these are not generic enough to be used in the external APIs"
edition = "2021"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = []
serde = ["dep:serde", "dep:serde_bytes", "hopr-crypto-types/serde"]

[dependencies]
aquamarine = { workspace = true }
hex-literal = { workspace = true }
num_enum = { workspace = true }
multiaddr = { workspace = true }
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
smart-default = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

hopr-crypto-random = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
criterion = { workspace = true }
lazy_static = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]
