[package]
name = "hopr-internal-types"
version = "0.17.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
description = "Contains HOPR-specific types required internally by the HOPR node"
edition = "2024"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = ["rayon"]
rayon = ["dep:hopr-parallelize"]
serde = [
  "dep:serde",
  "dep:serde_bytes",
  "hopr-crypto-types/serde",
  "hopr-primitive-types/serde",
]
fixed-rng = ["hopr-crypto-random/fixed-rng", "hopr-crypto-types/fixed-rng"]

[dependencies]
aquamarine = { workspace = true }
async-trait = { workspace = true }
hex-literal = { workspace = true }
num_enum = { workspace = true }
multiaddr = { workspace = true }
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
smart-default = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

hopr-crypto-random = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-primitive-types = { workspace = true }
hopr-parallelize = { workspace = true, optional = true }


[dev-dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
bimap = { workspace = true }
mockall = { workspace = true }
lazy_static = { workspace = true }
parameterized = { workspace = true }
tokio = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[package.metadata.cargo-shear]
ignored = ["serde_bytes"]
