[package]
name = "hopr-network-types"
version = "0.7.1"
authors = ["HOPR Association <tech@hoprnet.org>"]
description = "Contains types used for networking over the HOPR protocol"
edition = "2021"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[features]
default = []
serde = [
  "dep:serde",
  "dep:serde_bytes",
  "libp2p-identity/serde",
  "hopr-crypto-packet/serde",
  "hopr-crypto-types/serde",
  "hopr-path/serde",
]
runtime-tokio = [
  "dep:tokio",
  "dep:tokio-util",
  "hopr-async-runtime/runtime-tokio",
  "hickory-resolver/tokio",
]
prometheus = ["dep:lazy_static", "dep:hopr-metrics"]

[dependencies]
aquamarine = { workspace = true }
arrayvec = { workspace = true }
bitvec = { workspace = true }
cfg-if = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-skiplist = { workspace = true }
dashmap = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
governor = { workspace = true }
bytesize = { workspace = true }
hex = { workspace = true }
hickory-resolver = { workspace = true }
lazy_static = { workspace = true, optional = true }
libp2p-identity = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
smart-default = { workspace = true }
socket2 = { workspace = true, features = ["all"] }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true, features = ["net", "io"] }
tracing = { workspace = true }
validator = { workspace = true }

hopr-platform = { workspace = true }
hopr-primitive-types = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-crypto-packet = { workspace = true }
hopr-crypto-random = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-async-runtime = { workspace = true }
hopr-metrics = { workspace = true, optional = true }
hopr-path = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
ctor = { workspace = true }
criterion = { workspace = true }
hex-literal = { workspace = true }
lazy_static = { workspace = true }
parameterized = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rayon = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tokio = { workspace = true }
tokio-util = { workspace = true }

hopr-crypto-random = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[[bench]]
name = "session"
harness = false
