[package]
name = "hopr-network-types"
version = "1.0.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
description = "Contains types used for networking over the HOPR protocol"
edition = "2021"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[features]
default = []
capture = ["dep:pcap-file"]
serde = [
  "dep:serde",
  "dep:serde_bytes",
  "libp2p-identity/serde",
  "hopr-crypto-packet/serde",
  "hopr-crypto-types/serde",
  "hopr-path/serde",
]
runtime-tokio = [
  "dep:tokio",
  "dep:tokio-util",
  "hopr-async-runtime/runtime-tokio",
  "hickory-resolver/tokio",
]
prometheus = ["dep:lazy_static", "dep:hopr-metrics"]

[dependencies]
arrayvec = { workspace = true }
cfg-if = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
hickory-resolver = { workspace = true }
lazy_static = { workspace = true, optional = true }
libp2p-identity = { workspace = true }
pin-project = { workspace = true }
pcap-file = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
socket2 = { workspace = true, features = ["all"] }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true, features = ["net", "io"] }
tracing = { workspace = true }

hopr-primitive-types = { workspace = true }
hopr-internal-types = { workspace = true }
hopr-crypto-packet = { workspace = true }
hopr-crypto-random = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-async-runtime = { workspace = true }
hopr-metrics = { workspace = true, optional = true }
hopr-path = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
lazy_static = { workspace = true }
parameterized = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
test-log = { workspace = true }

hopr-crypto-random = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]
