[package]
name = "hopr-network-types"
version = "1.2.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
description = "Contains types used for networking over the HOPR protocol"
edition.workspace = true
rust-version.workspace = true
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[features]
default = []
capture = ["dep:pcap-file"]
serde = [
  "dep:serde",
  "dep:serde_bytes",
  "libp2p-identity/serde",
  "hopr-types/serde",
]
runtime-tokio = [
  "dep:tokio",
  "dep:tokio-util",
  "dep:hopr-async-runtime",
  "hopr-async-runtime/runtime-tokio",
  "hickory-resolver/tokio",
]
telemetry = ["dep:hopr-metrics"]

[dependencies]
arrayvec = { workspace = true }
cfg-if = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
futures-time = { workspace = true }
hickory-resolver = { workspace = true }
lazy_static = { workspace = true }
libp2p-identity = { workspace = true }
multiaddr = { workspace = true }
pin-project = { workspace = true }
pcap-file = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
socket2 = { workspace = true, features = ["all"] }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true, features = ["net", "io"] }
tracing = { workspace = true }

hopr-types = { workspace = true, features = ["random", "crypto"] }
hopr-async-runtime = { workspace = true, optional = true }
hopr-metrics = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
parameterized = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
test-log = { workspace = true }

hopr-async-runtime = { workspace = true, features = ["runtime-tokio"] }

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[package.metadata.cargo-shear]
ignored = ["serde_bytes"]
