[package]
name = "hopr-parallelize"
version = "0.1.1"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Generic types used through the entire code base"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = ["rayon"]
rayon = ["dep:rayon"]
runtime-tokio = ["dep:tokio"]

[dependencies]
futures = { workspace = true }
rayon = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[package.metadata.cargo-machete]
ignored = ["tokio"]

# [package.metadata.cargo-shear]
# ignored = ["tokio"]
