[package]
name = "hopr-parallelize"
version = "0.2.1"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2024"
description = "Generic types used through the entire code base"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = ["rayon"]
rayon = ["dep:rayon"]
runtime-tokio = ["dep:tokio"]
prometheus = ["dep:hopr-metrics"]

[dependencies]
futures = { workspace = true }
lazy_static = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }

hopr-metrics = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }

[package.metadata.cargo-machete]
ignored = ["tokio"]

[package.metadata.cargo-shear]
ignored = ["tokio"]
