[package]
name = "hopr-primitive-types"
version = "0.5.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Generic types used through the entire code base"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[dependencies]
float-cmp = { workspace = true }
hex = { workspace = true }
primitive-types = { workspace = true }
rlp = "0.5.2"                          # TODO: remove in 3.0
regex = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

hopr-crypto-random = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
hex-literal = { workspace = true }

[features]
default = []
