[package]
name = "hopr-primitive-types"
version = "0.9.1"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Generic types used through the entire code base"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[dependencies]
bigdecimal = { workspace = true }
float-cmp = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
primitive-types = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

hopr-bindings = { workspace = true}

[dev-dependencies]
anyhow = { workspace = true }
hex-literal = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[features]
default = []
