[package]
name = "hopr-primitive-types"
version = "0.10.0"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2024"
description = "Generic types used through the entire code base"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[features]
default = []
serde = ["dep:serde", "dep:serde_bytes", "chrono/serde"]

[dependencies]
bigdecimal = { workspace = true }
float-cmp = { workspace = true }
hex = { workspace = true }
lazy_static = { workspace = true }
primitive-types = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
hex-literal = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]
