[package]
name = "hopr-crypto-keypair"
version = "0.4.1"
authors = ["HOPR Association <tech@hoprnet.org>"]
edition = "2021"
description = "Rust keypair modules for HOPRd"
homepage = "https://hoprnet.org/"
repository = "https://github.com/hoprnet/hoprnet"
license = "GPL-3.0-only"

[lib]
crate-type = ["rlib"]

[dependencies]
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
scrypt = { workspace = true, default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true }
typenum = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

hopr-crypto-random = { workspace = true }
hopr-crypto-types = { workspace = true }
hopr-platform = { workspace = true }
hopr-primitive-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
to-file = []
geth-compat = []
