[package]
name = "hopr-crypto-packet"
description = "Contains high-level HOPR protocol building blocks for packet interaction"
version = "1.3.1"
edition.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["hopr", "crypto", "sphinx", "mixnet"]
repository.workspace = true
homepage.workspace = true
categories = ["cryptography", "network-programming"]
authors.workspace = true
rust-version.workspace = true
include = [
  "README.md",
  "src/**/*.rs",
  "Cargo.toml",
  "LICENSE",
]

[lib]
crate-type = ["rlib"]

[features]
default = ["rayon", "ed25519"]
all-benchmarks = []

rayon = ["hopr-utils/parallelize-rayon"]
ed25519 = []
x25519 = []
secp256k1 = []
serde = [
  "dep:serde",
  "dep:serde_bytes",
  "flagset/serde",
  "generic-array/serde",
  "elliptic-curve/serde",
  "curve25519-dalek/serde",
  "k256/serde",
  "hopr-types/serde",
]
allocator-mimalloc = [
  "dep:mimalloc",
] # Use mimalloc as the global allocator on Linux
allocator-jemalloc = [
  "dep:tikv-jemallocator",
] # Use jemalloc as the global allocator on Linux

[dependencies]
hex = { workspace = true }
flagset = { workspace = true }
strum = { workspace = true }
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

bimap = { workspace = true }
curve25519-dalek = { workspace = true }
elliptic-curve = "0.13.8"
generic-array = { workspace = true }
k256 = { workspace = true, features = ["arithmetic", "ecdh", "hash2curve"] }
subtle = { workspace = true }
typenum = { workspace = true }

hopr-utils = { workspace = true, features = ["parallelize"] }
hopr-types = { workspace = true, features = [
  "crypto",
  "random",
  "internal",
  "primitive",
] }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
hex-literal = { workspace = true }
lazy_static = { workspace = true }
parameterized = { workspace = true }
postcard = { workspace = true }
tokio = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[package.metadata.cargo-shear]
ignored = ["serde_bytes"]

[[bench]]
name = "packet_bench"
harness = false

[[bench]]
name = "por_bench"
harness = false

[[bench]]
name = "validation_bench"
harness = false

# Target-specific dependencies for memory allocators
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
