[package]
name = "hopr-crypto-packet"
version = "1.4.0"
description = "Contains high-level HOPR protocol building blocks for packet interaction"
edition.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["hopr", "crypto", "sphinx", "mixnet"]
repository.workspace = true
homepage.workspace = true
categories = ["cryptography", "network-programming"]
authors.workspace = true
rust-version.workspace = true
include = [
  "README.md",
  "src/**/*.rs",
  "benches/**/*.rs",
  "Cargo.toml",
  "LICENSE",
]

[lib]
crate-type = ["rlib"]
doctest = false

[features]
default = ["rayon", "ed25519", "bjj"]
all-benchmarks = []

rayon = ["hopr-utils/parallelize-rayon"]
ed25519 = ["dep:curve25519-dalek"]
x25519 = ["dep:curve25519-dalek"]
secp256k1 = ["dep:k256"]
bjj = []
serde = [
  "dep:serde",
  "dep:serde_bytes",
  "flagset/serde",
  "k256?/serde",
  "hybrid-array/serde",
  "elliptic-curve/serde",
  "curve25519-dalek?/serde",
  "hopr-protocol-pix/serde",
  "hopr-types/serde",
]
allocator-mimalloc = [
  "dep:mimalloc",
] # Use mimalloc as the global allocator on Linux
allocator-jemalloc = [
  "dep:tikv-jemallocator",
] # Use jemalloc as the global allocator on Linux

[dependencies]
const-hex = { workspace = true }
flagset = { workspace = true }
k256 = { workspace = true, optional = true }
strum = { workspace = true }
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

bimap = { workspace = true }
curve25519-dalek = { workspace = true, optional = true }
elliptic-curve = { workspace = true }
hybrid-array = { workspace = true, features = ["extra-sizes"] }
subtle = { workspace = true }

hopr-protocol-pix = { workspace = true }
hopr-utils = { workspace = true, features = ["parallelize"] }
hopr-types = { workspace = true, features = [
  "crypto",
  "random",
  "internal",
  "primitive",
] }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
hex-literal = { workspace = true }
lazy_static = { workspace = true }
parameterized = { workspace = true }
postcard = { workspace = true }
tokio = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

[package.metadata.cargo-shear]
ignored = ["serde_bytes"]

[[bench]]
name = "packet_bench"
harness = false

[[bench]]
name = "por_bench"
harness = false

[[bench]]
name = "validation_bench"
harness = false

# Target-specific dependencies for memory allocators
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
