[package]
name = "hopr-crypto-packet"
version = "1.5.0"
description = "Contains high-level HOPR protocol building blocks for packet interaction"
edition.workspace = true
license.workspace = true
readme = "README.md"
keywords = ["hopr", "crypto", "sphinx", "mixnet"]
repository.workspace = true
homepage.workspace = true
categories = ["cryptography", "network-programming"]
authors.workspace = true
rust-version.workspace = true
include = [
  "README.md",
  "src/**/*.rs",
  "benches/**/*.rs",
  "Cargo.toml",
  "LICENSE",
]

[lib]
crate-type = ["rlib"]
doctest = false

[features]
default = ["rayon", "ed25519", "bjj"]
all-benchmarks = []

rayon = ["hopr-utils/parallelize-rayon"]
ed25519 = []
x25519 = []
secp256k1 = []
bjj = []
serde = [
  "dep:serde",
  "dep:serde_bytes",
  "flagset/serde",
  "hopr-protocol-pix/serde",
  "hopr-types/serde",
]
allocator-mimalloc = [
  "dep:mimalloc",
] # Use mimalloc as the global allocator on Linux
allocator-jemalloc = [
  "dep:tikv-jemallocator",
] # Use jemalloc as the global allocator on Linux

[dependencies]
const-hex = { workspace = true }
flagset = { workspace = true }
strum = { workspace = true }
serde = { workspace = true, optional = true }
serde_bytes = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }

bimap = { workspace = true }
subtle = { workspace = true }

hopr-protocol-pix = { workspace = true }
hopr-utils = { workspace = true, features = ["parallelize"] }
hopr-types = { workspace = true, features = [
  "crypto",
  "random",
  "internal",
  "primitive",
] }

[dev-dependencies]
anyhow = { workspace = true }
cfg-if.workspace = true
criterion = { workspace = true }
hex-literal = { workspace = true }
lazy_static = { workspace = true }
parameterized = { workspace = true }
postcard = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "packet_bench"
harness = false

[[bench]]
name = "por_bench"
harness = false

[[bench]]
name = "validation_bench"
harness = false

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]

# Target-specific dependencies for memory allocators
[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true, optional = true }
